--- a/jobs.html
+++ b/jobs.html
@@ -150,7 +150,7 @@
             }
 
             try {
-                const response = await fetch('https://api.precrm.fr/verify', {
+                const response = await fetch('https://api.mixed-marketing-actions.ovh/verify', {
                     method: 'POST',
                     headers: {
                         'x-api-key': apiKey,
