--- a/jobs.html
+++ b/jobs.html
@@ -157,6 +157,7 @@
                         'Content-Type': 'application/json'
                     },
                     body: JSON.stringify({
+                        service_id: "21647ac6-b6a1-4431-a7b6-dd603ed587e3",
                         user: {
                             email: userEmail
                         },
