--- a/jobs.html
+++ b/jobs.html
@@ -153,7 +153,7 @@
                 const response = await fetch('https://api.mixed-marketing-actions.ovh/verify', {
                     method: 'POST',
                     headers: {
-                        'x-api-key': apiKey,
+                        'x-api-key': 'mV3xihTh7m9ypwEAvrsxmWDwghb52jD5nQfotH44',
                         'Content-Type': 'application/json'
                     },
                     body: JSON.stringify({
