--- a/api-keys.html
+++ b/api-keys.html
@@ -337,6 +337,8 @@
                 <ul class="sidebar-menu">
                     <li><a href="#" class="active">API Keys</a></li>
                     <li><a href="destinations.html">Destinations</a></li>
+                    <li><a href="jobs.html">Jobs</a></li>
+                    <li><a href="programmatic.html">Programmatic</a></li>
                 </ul>
             </div>
             <a href="#" class="logout-btn" onclick="handleLogout()">Logout</a>
