--- a/jobs.html
+++ b/jobs.html
@@ -54,12 +54,10 @@
     <div class="sidebar p-3">
         <h3 class="mb-4">PreCRM</h3>
         <div class="nav flex-column">
-            <a href="actions.html" class="nav-link text-white">Actions</a>
-            <a href="contacts.html" class="nav-link text-white">Your contacts</a>
-            <a href="companies.html" class="nav-link text-white">Companies</a>
-            <a href="jobs.html" class="nav-link text-white">Jobs</a>
-            <a href="posts.html" class="nav-link text-white">Posts</a>
-            <a href="apis.html" class="nav-link text-white">APIs</a>
+            <li><a href="#" class="active">API Keys</a></li>
+            <li><a href="destinations.html">Destinations</a></li>
+            <li><a href="jobs.html">Jobs</a></li>
+            <li><a href="programmatic.html">Programmatic</a></li>
         </div>
     </div>
 
