--- a/jobs.html
+++ b/jobs.html
@@ -54,30 +54,10 @@
     <div class="sidebar p-3">
         <h3 class="mb-4">PreCRM</h3>
         <div class="nav flex-column">
-            <li><a href="#" class="text-gray-300 hover:text-white">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" />
-                </svg>
-                API Keys
-            </a></li>
-            <li><a href="destinations.html" class="text-gray-300 hover:text-white">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
-                </svg>
-                Destinations
-            </a></li>
-            <li><a href="jobs.html" class="text-white font-bold">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z" />
-                </svg>
-                Jobs
-            </a></li>
-            <li><a href="programmatic.html" class="text-gray-300 hover:text-white">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 9l3 3-3 3m5 0h3M5 20h14a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
-                </svg>
-                Programmatic
-            </a></li>
+            <a href="api-keys.html" class="nav-link text-white">APIs</a>
+            <a href="destinations.html" class="nav-link text-white">Destinations</a>
+            <a href="jobs.html" class="nav-link text-white">Jobs</a>
+            <a href="programmatic.html" class="nav-link text-white">Programmatic</a>
         </div>
     </div>
 
