--- a/destinations.html
+++ b/destinations.html
@@ -851,6 +851,8 @@
                 <ul class="sidebar-menu">
                     <li><a href="api-keys.html">API Keys</a></li>
                     <li><a href="#" class="active">Destinations</a></li>
+                    <li><a href="jobs.html">Jobs</a></li>
+                    <li><a href="programmatic.html">Programmatic</a></li>
                 </ul>
             </div>
             <a href="#" class="logout-btn" onclick="handleLogout()">Logout</a>
