--- a/programmatic.html
+++ b/programmatic.html
@@ -517,7 +517,7 @@
                               "parameters": [
                                 {
                                   "name": "x-api-key",
-                                  "value": "=" + this.userApiKey
+                                  "value": "${this.userApiKey}"
                                 }
                               ]
                             },
