--- a/jobs.html
+++ b/jobs.html
@@ -17,8 +17,9 @@
             width: 200px;
         }
         .main-content {
-            margin-left: 200px;
             padding: 20px;
+            width: calc(100% - 192px);
+            max-width: none !important;
         }
         .company-row {
             cursor: pointer;
