--- a/contacts.html
+++ b/contacts.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PreCRM - Contacts</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.5.0/dist/full.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .sidebar {
             background-color: #1a1f2d;
@@ -16,8 +18,9 @@
             width: 200px;
         }
         .main-content {
-            margin-left: 200px;
             padding: 20px;
+            width: calc(100% - 192px);
+            max-width: none !important;
         }
         .contact-row {
             cursor: pointer;
