--- a/destinations.html
+++ b/destinations.html
@@ -118,6 +118,8 @@
             border-radius: 4px;
             margin-top: 10px;
             font-size: 16px;
+            background-color: white;
+            color: #132134;
         }
 
         .connection-status {
