--- a/programmatic.html
+++ b/programmatic.html
@@ -714,25 +714,34 @@ ${bodyFields}
                         if (fieldName === 'dummy' && field.placeholder === true) {
                             fieldValue = 'true';
                         } else if (fieldName === 'inputs' && field.type === 'array') {
-                            // Format arrays properly with the placeholder or default value
+                            // Format arrays without quotes around placeholder for n8n
                             const arrayContent = field.placeholder || "your array of input.s";
-                            fieldValue = `["${arrayContent}"]`;
+                            fieldValue = `[${arrayContent}]`;  // No quotes around placeholder for arrays
                         } else {
                             // Generate value based on type and use placeholder if available
                             switch (field.type) {
                                 case 'string':
+                                    // Add quotes for strings
                                     fieldValue = field.placeholder ? `"${field.placeholder}"` : `"<${fieldName}>"`;
                                     break;
                                 case 'boolean':
+                                    // No quotes for booleans
                                     fieldValue = field.placeholder === true || field.default === true ? 'true' : 'false';
                                     break;
                                 case 'number':
-                                    fieldValue = field.placeholder !== undefined ? field.placeholder : (field.default || '0');
+                                    // No quotes for numbers
+                                    fieldValue = field.placeholder !== undefined ? `${field.placeholder}` : (field.default || '0');
                                     break;
                                 case 'array':
-                                    fieldValue = field.placeholder ? `["${field.placeholder}"]` : '[]';
+                                    // No quotes for array placeholders
+                                    fieldValue = field.placeholder ? `[${field.placeholder}]` : '[]';
+                                    break;
+                                case 'object':
+                                    // No quotes for object placeholders
+                                    fieldValue = field.placeholder ? `${field.placeholder}` : '{}';
                                     break;
                                 default:
+                                    // Default to quoted for unknown types
                                     fieldValue = `"<${fieldName}>"`;
                             }
                         }
